--- a/ms-config-properties/config-client/dev/application-dev.yml
+++ b/ms-config-properties/config-client/dev/application-dev.yml
@@ -1,19 +1,6 @@
 server:
-  port: 8888
+  port: 8800
 
 spring:
   application:
-    name: config-server
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/ArtiOtjig/eureka-config
-          search-paths:
-            - "ms-config-properties/{application}/{profile}"
-          default-label: main
-
-eureka:
-  client:
-    service-url:
-      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+    name: config-client-dev
